############################################################################
# <summary> CMakeLists.txt for utils library used by all the problem sets </summary>
# <date>    2020/03/27          </date>
# <author>  Michele Bianchi </author>
# <email>   jazzinghen@gmail.com </email>
############################################################################

add_subdirectory("utils")

add_subdirectory ("problem_set_1")
#add_subdirectory ("problem_set_2")
#add_subdirectory ("problem_set_3")
#add_subdirectory ("problem_set_4")
#add_subdirectory ("problem_set_5")
#add_subdirectory ("problem_set_6")